--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-image: linear-gradient(90deg, rgb(27, 0, 103), rgb(0, 0, 0));
+    background-image: linear-gradient(180deg, rgb(34, 9, 78), rgb(17, 140, 188), rgb(111, 205, 113));
 }
 .container{
     display: flex;
@@ -61,6 +61,6 @@ body{
         width: 100%;
     }
     .container .heading h3{
-        font-size: 1em;
+        font-size: 2em;
     }
 }
